--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,7 +55,7 @@ stages:
     jobs:    
     - deployment: DeployWebsite
       displayName: 'Deploy website'
-      environment: 'Production.DAVE'
+      environment: 'Production'
       strategy:
        runOnce:
          deploy:           
