--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,6 +45,11 @@ steps:
     projects: '$(project)'
     arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
     zipAfterPublish: false
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
 
 #stages:
 #  - stage: DeployWebsite
